--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mobx: ^2.1.1
+  flutter_modular: ^5.0.3
+  flutter_mobx: ^2.0.6+4
 
 dev_dependencies:
+  build_runner: ^2.3.0
+  mobx_codegen: ^2.0.7
   flutter_test:
     sdk: flutter
 
@@ -46,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
