--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/images_8.png
+    - assets/images/image_21.jpeg
+    - assets/images/image_21_2.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
